--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 .App-header {
-  background: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
+  background: linear-gradient(45deg, #fe6b8b 30%, #ff8e53 90%);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
