--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,5 @@
-.App {
+.app {
   text-align: center;
-}
-
-.App-header {
   background: linear-gradient(45deg, #fe6b8b 30%, #ff8e53 90%);
   min-height: 100vh;
   display: flex;
